fix missing handler name
found as a result of ansible upgrade in futuresystems/big-data-stack#99

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,7 +38,7 @@
   template:
     src: myid.j2
     dest: "{{ zookeeper_data_dir }}/myid"
-  notify: restart zookeeper
+  notify: enable and restart zookeeper
   tags:
     - zookeeper_configure
     - zookeeper
